Mon Apr  1 20:57:57 2013  Tanaka Akira  <akr@fsij.org>

	* ext/-test-/num2int/num2int.c: Return string for result, instead of
	  printing.

	* test/-ext-/num2int/test_num2int.rb: updated to follow above change.

Mon Apr  1 20:08:07 2013  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_num2long): Don't use SIGNED_VALUE uselessly.
	  (check_int): Ditto.
	  (check_short): Ditto.
	  (rb_num2fix): Ditto.
	  (rb_num2ulong_internal): Add a cast.

Mon Apr  1 18:41:35 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: skip autoconf 2.64 and 2.66, 2.67 seems short-lived
	  but stick on it for Debian Squeeze.

Mon Apr  1 14:22:52 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: check clang version by predefined macro values.
	  [Bug #8192]

Mon Apr  1 12:05:15 2013  Tanaka Akira  <akr@fsij.org>

	* numeric.c (check_uint): Take the 1st argument as unsigned long,
	  instead of VALUE.  Refine the validity test conditions.
	  (check_ushort): Ditto.

Mon Apr  1 07:15:03 2013  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* configure.in: use quadrigraph to put '[' or ']'. [Bug #8192]

Mon Apr  1 04:16:41 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: kick old clang. [ruby-dev:47204] [Bug #8192]

Mon Apr  1 01:12:46 2013  Tanaka Akira  <akr@fsij.org>

	* include/ruby/ruby.h (FIX2ULONG): Make it consistent with NUM2ULONG.

	* ext/-test-/num2int/num2int.c: Add utility methods for FIX2XXX tests.

	* test/-ext-/num2int/test_num2int.rb: Add tests for FIX2XXX.

Sun Mar 31 17:17:56 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (rb_mod_define_method): consider visibility in define_method.
	  patch by mashiro <mail AT mashiro.org>.  fix GH-268.

Sun Mar 31 15:40:30 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/configure.bat: try to fix option arguments split by commas and
	  equals here.  this batch file no longer run with old command.com.

	* tool/mkconfig.rb: no hacks for cmd.exe.

Sun Mar 31 13:47:04 2013  Tanaka Akira  <akr@fsij.org>
